Fixed some alignment issues to do with the taskHolders, specifically, the createMenu

--- a/css/mainContent/mainContent.css
+++ b/css/mainContent/mainContent.css
@@ -284,7 +284,7 @@ body.appLoading #mainContent {
 	#mainContentHolder .todoListHolder {
 		position: relative;
 
-		width: 100%;
+		width: calc(100% + 10px);
 		height: auto;
 			
 		overflow: show;
